     and memory constraints;
     map queues to arbitrary wr options, in particular, a special queue
     for p4_stage1 maps to a specific cloud host flavour
 - correction of build method for rpt_list attribute in product
 - make bam_cluster_count_check pipeline job dependent on
     qc_spatial_filter (in function_list_central.json)
 - archival daemon - limit number of simultaneously archived NovaSeq runs
 - wr executor - explicitly propagate pipeline's environment to jobs
 - illumina archiver job:
     exclude discontinued verbose attribute and paths that are not needed
     for the minimal work this loader is doing now;
     remove LSF preexec requesting that the job is a unique runner since
     db queries are much simpler now
 - change signature of the autoqc archival job in line with extended
   functionality of the autoqc db loader (ability to find JSON files
   in the run folder)
 - change components_as_products method of npg_pipeline::product to
   return a list with one item when there is only one component in
   the composition (instead of an empty list)
 - tileviz index file with links to lane-level tileviz reports is created

release 52.1
 - bug fix in jobs names where jobs name should include the pipeline
   name: pipeline name is now propagated from the pluggable module
   to the function module; bug manifestation - job names contained
   function module name instead of the pipeline name, ie, for
   example prod_pipeline_end_26263_start_stop instead of
   prod_lsf_start_26263_central
 - pipeline name attribute is derived from the script name that
   invoked the pipeline, making it unnecessary to explicitly pass
   the function list name in the archival pipeline script
 - fix for seq_alignment so specified rna aligners do rna analysis
 - added (samtools) target stats to stage2 analysis
 - correct p4 prunes for samtools stats (target/baits)

release 52.0.5
 - bug fix in npg_run_is_deletable: stop using unsupported options
   for npg_pipeline::cache